--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+    
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">   
 
 
     <title>Daniel Camacho Development</title>
@@ -33,5 +36,11 @@
    <script src="js/magnific-popup.js"></script>
    <script src="js/init.js"></script>
 
+
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+   <script src="/__/firebase/7.6.1/firebase-app.js"></script>
+
+   <!-- Initialize Firebase -->
+   <script src="/__/firebase/init.js"></script>
   </body>
 </html>
