--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/layout.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/media-queries.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
-    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> 
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">   
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
 
-    <title>Daniel Camacho Development</title>
+    <title>Daniel Camacho Personal Site</title>
   </head>
 
   <body>
@@ -36,11 +36,17 @@
    <script src="js/magnific-popup.js"></script>
    <script src="js/init.js"></script>
 
-
    <!-- The core Firebase JS SDK is always required and must be listed first -->
-   <script src="/__/firebase/7.6.1/firebase-app.js"></script>
+   <script src="/__/firebase/7.14.1/firebase-app.js"></script>
 
-   <!-- Initialize Firebase -->
-   <script src="/__/firebase/init.js"></script>
+   <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+   <script src="/__/firebase/7.14.1/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script src="/__/firebase/init.js"></script>
+    <script>
+      firebase.analytics().logEvent('notification_received');
+    </script>
   </body>
 </html>
